tests/ui/unrecognized-repr.stderr
error: unrecognized repr on struct that implements RefCast
 --> $DIR/unrecognized-repr.rs:4:19
  |
4 | #[repr(packed, C, usize, usize(0), usize = "0")]
  |                   ^^^^^

error: unrecognized repr on struct that implements RefCast
 --> $DIR/unrecognized-repr.rs:4:26
  |
4 | #[repr(packed, C, usize, usize(0), usize = "0")]
  |                          ^^^^^^^^

error: unrecognized repr on struct that implements RefCast
 --> $DIR/unrecognized-repr.rs:4:36
  |
4 | #[repr(packed, C, usize, usize(0), usize = "0")]
  |                                    ^^^^^^^^^^^

error[E0552]: unrecognized representation hint
 --> $DIR/unrecognized-repr.rs:4:26
  |
4 | #[repr(packed, C, usize, usize(0), usize = "0")]
  |                          ^^^^^^^^

error[E0552]: unrecognized representation hint
 --> $DIR/unrecognized-repr.rs:4:36
  |
4 | #[repr(packed, C, usize, usize(0), usize = "0")]
  |                                    ^^^^^^^^^^^

error[E0517]: attribute should be applied to an enum
 --> $DIR/unrecognized-repr.rs:4:19
  |
4 |   #[repr(packed, C, usize, usize(0), usize = "0")]
  |                     ^^^^^
5 | / struct Test {
6 | |     s: String,
7 | | }
  | |_- not an enum

error[E0517]: attribute should be applied to an enum
 --> $DIR/unrecognized-repr.rs:4:26
  |
4 |   #[repr(packed, C, usize, usize(0), usize = "0")]
  |                            ^^^^^^^^
5 | / struct Test {
6 | |     s: String,
7 | | }
  | |_- not an enum

error[E0517]: attribute should be applied to an enum
 --> $DIR/unrecognized-repr.rs:4:36
  |
4 |   #[repr(packed, C, usize, usize(0), usize = "0")]
  |                                      ^^^^^^^^^^^
5 | / struct Test {
6 | |     s: String,
7 | | }
  | |_- not an enum

error[E0566]: conflicting representation hints
 --> $DIR/unrecognized-repr.rs:4:8
  |
4 | #[repr(packed, C, usize, usize(0), usize = "0")]
  |        ^^^^^^  ^  ^^^^^  ^^^^^^^^  ^^^^^^^^^^^
  |
  = note: `#[deny(conflicting_repr_hints)]` on by default
  = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
  = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>
